[package]
name = "rm8-to-redis"
version = "1.0.0-SNAPSHOT"
authors = ["Bernd Vogt <bernd.vogt@sourcepit.org>"]

[profile.release]
debug = 1

[dependencies]
clap = "=2.34.0"
common_failures = "=0.1.1"
failure = "=0.1.8"
libc = "=0.2.112"
redis = "=0.21.4"
serde = { version = "=1.0.133", features = ["derive"] }
serde_json = "=1.0.74"
log = "=0.4.14"
stderrlog = "=0.5.1"