[package]
name = "rm8-to-redis"
version = "2.0.0-SNAPSHOT"
edition = "2021"
authors = ["Bernd Vogt <bernd.vogt@sourcepit.org>"]

[profile.release]
debug = 1

[dependencies]
anyhow = { version = "=1.0.66", features = ["backtrace"] }
clap = { version = "=4.0.23", features = ["derive"] }
libc = "=0.2.137"
log = "=0.4.17"
redis = "=0.22.1"
stderrlog = "=0.5.4"
thiserror = "=1.0.37"